test/cli/test-mutating-policy/cel-regex-replace/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
spec:
  containers:
  - name: nginx
    image: docker.io/nginx:latest
