test/cli/test-mutating-policy/cel-regex-replace/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resource.yaml
results:
- isMutatingPolicy: true
  kind: Pod
  patchedResources: patchedResource.yaml
  policy: rewrite-image-registry
  resources:
  - default/test-pod
  result: pass
